# minishell

./: CMakeLists.txt  Makefile
includes/: ft_shell.h
libft/: Makefile  ft_atoi.c  ft_bzero.c  ft_free_split.c  ft_isalnum.c  ft_isalpha.c  ft_isascii.c  ft_isdigit.c  ft_isprint.c  ft_isspace.c  ft_itoa.c  ft_lstadd.c  ft_lstdel.c  ft_lstdelone.c  ft_lstiter.c  ft_lstmap.c  ft_lstnew.c  ft_lstrev.c  ft_memalloc.c  ft_memccpy.c  ft_memchr.c  ft_memcmp.c  ft_memcpy.c  ft_memdel.c  ft_memmove.c  ft_memset.c  ft_putchar.c  ft_putchar_fd.c  ft_putendl.c  ft_putendl_fd.c  ft_putnbr.c  ft_putnbr_fd.c  ft_putstr.c  ft_putstr_fd.c  ft_strcat.c  ft_strchr.c  ft_strclr.c  ft_strcmp.c  ft_strcpy.c  ft_strcspn.c  (+26 more)
libft/ft_printf/: Makefile
libft/ft_printf/src/: assist.c  color.c  format_parse.c  free.c  ft_printf.c  numeric_helpers.c  print_base.c  print_int.c  print_symbolic.c  print_unsigned.c  utils.c
libft/ft_printf/src/float/: mult.c  negs.c  prec.c  prec2.c  print_float.c  subtr.c  sum.c
libft/include/: ft_printf.h  libft.h
source/: cmd_exec.c  shell.c
source/builtins/: cd.c  echo.c  env.c  exit.c  setenv.c  unsetenv.c
