cmake_minimum_required(VERSION 3.10)
project(minishell C)

set(CMAKE_C_STANDARD 11)

include_directories(includes)
include_directories(libft/include)

add_executable(minishell
		includes/ft_shell.h
		libft/ft_printf/src/float/mult.c
		libft/ft_printf/src/float/negs.c
		libft/ft_printf/src/float/prec.c
		libft/ft_printf/src/float/prec2.c
		libft/ft_printf/src/float/print_float.c
		libft/ft_printf/src/float/subtr.c
		libft/ft_printf/src/float/sum.c
		libft/ft_printf/src/assist.c
		libft/ft_printf/src/color.c
		libft/ft_printf/src/format_parse.c
		libft/ft_printf/src/free.c
		libft/ft_printf/src/ft_printf.c
		libft/ft_printf/src/numeric_helpers.c
		libft/ft_printf/src/print_base.c
		libft/ft_printf/src/print_int.c
		libft/ft_printf/src/print_symbolic.c
		libft/ft_printf/src/print_unsigned.c
		libft/ft_printf/src/utils.c
		libft/include/ft_printf.h
		libft/include/libft.h
		libft/ft_atoi.c
		libft/ft_bzero.c
		libft/ft_free_split.c
		libft/ft_isalnum.c
		libft/ft_isalpha.c
		libft/ft_isascii.c
		libft/ft_isdigit.c
		libft/ft_isprint.c
		libft/ft_isspace.c
		libft/ft_itoa.c
		libft/ft_lstadd.c
		libft/ft_lstdel.c
		libft/ft_lstdelone.c
		libft/ft_lstiter.c
		libft/ft_lstmap.c
		libft/ft_lstnew.c
		libft/ft_lstrev.c
		libft/ft_memalloc.c
		libft/ft_memccpy.c
		libft/ft_memchr.c
		libft/ft_memcmp.c
		libft/ft_memcpy.c
		libft/ft_memdel.c
		libft/ft_memmove.c
		libft/ft_memset.c
		libft/ft_putchar.c
		libft/ft_putchar_fd.c
		libft/ft_putendl.c
		libft/ft_putendl_fd.c
		libft/ft_putnbr.c
		libft/ft_putnbr_fd.c
		libft/ft_putstr.c
		libft/ft_putstr_fd.c
		libft/ft_strcat.c
		libft/ft_strchr.c
		libft/ft_strclr.c
		libft/ft_strcmp.c
		libft/ft_strcpy.c
		libft/ft_strcspn.c
		libft/ft_strdel.c
		libft/ft_strdup.c
		libft/ft_strequ.c
		libft/ft_striter.c
		libft/ft_striteri.c
		libft/ft_strjoin.c
		libft/ft_strlcat.c
		libft/ft_strlen.c
		libft/ft_strmap.c
		libft/ft_strmapi.c
		libft/ft_strncat.c
		libft/ft_strncmp.c
		libft/ft_strncpy.c
		libft/ft_strnequ.c
		libft/ft_strnew.c
		libft/ft_strnstr.c
		libft/ft_strrchr.c
		libft/ft_strsplit.c
		libft/ft_strstr.c
		libft/ft_strsub.c
		libft/ft_strtrim.c
		libft/ft_swap.c
		libft/ft_tolower.c
		libft/ft_toupper.c
		libft/get_next_line.c
		source/builtins/cd.c
		source/builtins/echo.c
		source/builtins/env.c
		source/builtins/exit.c
		source/builtins/setenv.c
		source/builtins/unsetenv.c
		source/shell.c source/cmd_exec.c)
